# mutils

./: .ccls  .gitignore  .travis.yml  CMakeLists.txt  README.md  appveyor.yml  build.bat  build.sh  build_all.bat  build_all.sh  build_rez.bat  build_rez.sh  codecov.yml  config.bat  config_all.sh  notes.txt  prebuild.bat  prebuild.sh  setup_coc.sh
.cache/clangd/index/: BitUtils.h.616BFA237707D184.idx  CUI.h.85D2B442F3C2555B.idx  CompactValue.h.7172F1E75E5AA68E.idx  CustomFont.cpp.0057501DC4CEEBAE.idx  CustomFont.h.2ADEE81DED86FADC.idx  IDevice.h.4A1FC897F0F8334C.idx  IDeviceBuffer.h.8001CC1C7BF5A897.idx  ImGuiFileDialog.cpp.5DC4F41AD7E8ECCE.idx  ImGuiFileDialog.h.1B52CB8D5E09F201.idx  ImGuiFileDialogConfig.h.4A2D22275149E915.idx  TracyAlign.hpp.55A17EF91A57FD84.idx  TracyAlloc.hpp.6BC40F67437D289F.idx  TracyApi.h.B66645C712265B46.idx  TracyArmCpuTable.hpp.BB93318481380441.idx  TracyC.h.9F71A38B6D4874C0.idx  TracyCallstack.cpp.A42FC7B6A7CE7ED5.idx  TracyCallstack.h.CBECE7BEDA8F8F42.idx  TracyCallstack.hpp.057D289CFBCE3A00.idx  TracyClient.cpp.F3547DB831685685.idx  TracyDxt1.cpp.B8E63DA5665DF752.idx  TracyDxt1.hpp.D583C862C16A49B9.idx  TracyFastVector.hpp.21FE3AF861D9097F.idx  TracyForceInline.hpp.BE93F3675E51AF38.idx  TracyMutex.hpp.869E261EFD191796.idx  TracyProfiler.cpp.59F410F3044B101C.idx  TracyProfiler.hpp.E6804DC6A873AC4C.idx  TracyProtocol.hpp.F7B527B532F722B9.idx  TracyQueue.hpp.441D9EF182A9A972.idx  TracyScoped.hpp.D8D7A5D4959D7EC8.idx  TracySocket.cpp.F86DE87EAA38C4DB.idx  TracySocket.hpp.3AB0775A49D592F9.idx  TracySysTime.cpp.929DF83CD72BD502.idx  TracySysTime.hpp.B6C8ACEB7B2D19C0.idx  TracySysTrace.cpp.BD72804308DC1C37.idx  TracySysTrace.hpp.D8D26B76CD0BD665.idx  TracySystem.cpp.5C95272FD4EC0324.idx  TracySystem.hpp.9AC07475F90731CD.idx  TracyThread.hpp.3E434997DFECD764.idx  Utils.cpp.B891AD4E68680016.idx  Utils.h.BD6B470896A54EFF.idx  (+293 more)
.github/workflows/: builds.yml  cmake.yml  coverage.yml
cmake/: all.cmake  mutils-config.cmake.in
include/mutils/: common.h
include/mutils/algorithm/: container_utils.h  containerutils.h  ringiterator.h
include/mutils/animation/: time_provider.h  timer.h
include/mutils/callback/: callback.h
include/mutils/chibi/: chibi.h
include/mutils/compile/: compile_messages.h  meta_tags.h
include/mutils/device/: IDevice.h  IDeviceBuffer.h
include/mutils/file/: file.h  runtree.h  toml_utils.h
include/mutils/geometry/: geometry.h  icosahedron.h  icosphere.h  indexer.h  rounded_box.h  sphere.h  standard_shapes.h  vertex_spacial_sort.h
include/mutils/gl/: gl_buffer.h  gl_helpers.h  gl_shader.h  gl_texture.h  standard_shapes.h
include/mutils/json/: jsonutils.h
include/mutils/logger/: logger.h
include/mutils/math/: imgui_glm.h  math.h  math_utils.h  mathutils.h
include/mutils/memory/: allocator.h
include/mutils/profile/: profile.h
include/mutils/registrar/: registrar.h
include/mutils/shader/: shader.h
include/mutils/string/: string_utils.h  stringutils.h  tomlutils.h
include/mutils/thread/: mempool.h  threadutils.h
include/mutils/time/: profiler.h  time_provider.h  time_utils.h  timeline.h  timer.h
include/mutils/ui/: colors.h  dpi.h  fbo.h  imgui_extras.h  layout_manager.h  sdl_dpi.h  sdl_imgui_starter.h  style.h  theme.h  ui_manager.h
include/mutils/vm/: vm.h
m3rdparty/: CMakeLists.txt
m3rdparty/FileWatcher/: FileWatcher.cpp  FileWatcherLinux.cpp  FileWatcherLinux.h  FileWatcherOSX.cpp  FileWatcherOSX.h  FileWatcherWin32.cpp  watcher.h
m3rdparty/chibi/: bignum.c
m3rdparty/chibi/include/chibi/: features.h
m3rdparty/chibi/lib/srfi/: 142.sld
m3rdparty/chibi/lib/srfi/33/: test.sld
m3rdparty/concurrentqueue/: concurrentqueue.h
m3rdparty/ctti/include/ctti/detail/: name_filters.hpp
m3rdparty/gsl/gsl/: gsl-lite.hpp
m3rdparty/httplib/: httplib.h
m3rdparty/httplib/test/: test.vcxproj
m3rdparty/imgui/examples/: imgui_impl_sdl.cpp
m3rdparty/imguifiledialog/ImGuiFileDialog/: ImGuiFileDialog.cpp  ImGuiFileDialog.h
m3rdparty/janet/: janet.c
m3rdparty/lexertk/: lexertk.hpp  lexertk2.hpp
m3rdparty/miniaudio/: miniaudio.h
m3rdparty/mpc/: mpc.c
m3rdparty/nanovg/example/: example_gles3.c
m3rdparty/nod/include/nod/: nod.hpp
m3rdparty/orca-c/: base.h
m3rdparty/threadpool/: threadpool.h
m3rdparty/yoga/yoga/: YGNodePrint.cpp  Yoga.cpp
ninja/: CMakeCache.txt  CTestTestfile.cmake  build.ninja  cmake_install.cmake
ninja/.cache/clangd/index/: install.h.2BF31C6FFCFE38D5.idx
ninja/cmake/: mutils-config-version.cmake  mutils-config.cmake
ninja/include/chibi/: install.h
src/: CMakeLists.txt
src/algorithm/: container_utils.cpp  containerutils.cpp
src/animation/: timer.cpp
src/callback/: callback.cpp
src/chibi/: chibi.cpp
src/compile/: compile_messages.cpp  compile_messages.test.cpp  compile_parse_shader_errors.cpp  meta_tags.cpp
src/file/: file.cpp  runtree.cpp  toml_utils.cpp
src/geometry/: indexer.cpp  standard_shapes.cpp  vertex_spacial_sort.cpp
src/gl/: gl_buffer.cpp  gl_shader.cpp  gl_shader.test.cpp  gl_texture.cpp
src/math/: math_utils.cpp  math_utils.test.cpp  mathutils.cpp  mathutils.test.cpp
src/string/: murmur_hash.cpp  string_utils.cpp  stringutils.cpp  tomlutils.cpp
src/thread/: mempool.cpp
src/time/: profiler.cpp  time_provider.cpp  timeline.cpp  timer.cpp
src/ui/: colors.cpp  dpi.cpp  fbo.cpp  imgui_extras.cpp  layout_manager.cpp  sdl_imgui_starter.cpp  theme.cpp  ui_manager.cpp
src/vm/: vm.test.cpp
tests/: CMakeLists.txt
